[package]
name = "entrs"
version = "0.1.0"
authors = ["imDema <luca.de.martini@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deflate="0.9"
plotters="0.3"
itertools="0.10"
# rayon="1.5"

[profile.release]
debug = true